--- a/Introduction.html
+++ b/Introduction.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="./Css/Style.css">
+    <script src="./Js/"></script>
     <link rel="icon" type="Img/MLW_Icon" href="./Img/MLW_Icon.png">
 </head>
 <body>
