--- a/HTML/Introduction.html
+++ b/HTML/Introduction.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <div class="IntChaptersClass">
+        <ul class="UlIn">
+            <div class="IntChapterIClass">
                 <li>    
-                    <a href="Chapters.html">Chapters</a>     
+                    <a href="Chapter I.html">Chapte I</a>     
+                </li>
+            </div>
+            <div class="IntChapterIIClass">
+                <li>    
+                    <a href="">Chapte II</a>     
                 </li>
             </div>
             <div class="IntHomeClass">
@@ -43,5 +48,8 @@
         </div>
 
     </head>
+    <footer>
+        <span>Copyright &copy; | sperubrum </span>
+    </footer>
 </body>
 </html>
