--- a/Introduction.html
+++ b/Introduction.html
@@ -34,7 +34,7 @@
         </ul>
     </nav>
     <head>
-        <div class="IntIntroductionClass">
+        <div class="holder">
             <img id="Img" src="./Img/Link_Background.png">
 
             <label id="Tx">
